--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 	<nav>
 		<ul>
 			<li>
-				<a href="#"><img src="Img/home.png" id="hom"></a>
-				<a href="#"><img src="Img/insta.png" id="instag"></a>
-				<a href="#"><img src="Img/insta1.jpg" id="instpix"></a>
+				<a href="#"><img src="img/home.png" id="hom"></a>
+				<a href="#"><img src="img/insta.png" id="instag"></a>
+				<a href="#"><img src="img/insta1.jpg" id="instpix"></a>
 			</li>
 		</ul>
 	</nav>
 	<div id="div0">
 		<span id="post">355 POSTS</span>
-		<img src="Img/tilesmenuicon.png" id="tile">
-		<img src="Img/listicon.png" id="list">
+		<img src="img/tilesmenuicon.png" id="tile">
+		<img src="img/listicon.png" id="list">
 	</div>
 	<aside>
 		<div id="part1">
 			<center>
-				<img src="Img/insta1.jpg">
+				<img src="img/insta1.jpg">
 				<h4>CG AUTO LTD</h4>
 				<p>The Automobile Palace</p>
 				<p>The right place for all your automobile needs and specifications.</p>
@@ -37,54 +37,54 @@
 					<h4>950</h4> 
 					<p>Following</p>
 				</div>
-				<div id="div3"><img src="Img/calendericon.png">cgautoltd.com</div>
+				<div id="div3"><img src="img/calendericon.png">cgautoltd.com</div>
 			</center>
 		</div>
 		<div id="part2">
 				<p>ALSO RECOMMENDED</p>
-				<div id="imag"><img src="Img/insta1.jpg" id="img5"></div>
+				<div id="imag"><img src="img/insta1.jpg" id="img5"></div>
 				<div id="text"><h4>LAMBORGHINI</h4>
 				<p>Latest car pictures</p></div>
-				<div id="imag"><img src="Img/insta1.jpg" id="img5"></div>
+				<div id="imag"><img src="img/insta1.jpg" id="img5"></div>
 				<div id="text"><h4>MERCEDES-BENZ</h4>
 				<p>Latest car pictures</p></div>
-				<div id="imag"><img src="Img/insta1.jpg" id="img5"></div>
+				<div id="imag"><img src="img/insta1.jpg" id="img5"></div>
 				<div id="text"><h4>ROLLS ROYCE</h4>
 				<p>Latest car pictures</p></div>
-				<div id="imag"><img src="Img/insta1.jpg" id="img5"></div>
+				<div id="imag"><img src="img/insta1.jpg" id="img5"></div>
 				<div id="text"><h4>ASTON MARTIN</h4>
 				<p>Latest car pictures</p></div>
-				<div id="imag"><img src="Img/insta1.jpg" id="img5"></div>
+				<div id="imag"><img src="img/insta1.jpg" id="img5"></div>
 				<div id="text"><h4>LAND ROVER</h4>
 				<p>Latest car pictures</p></div>
 		</div>
 	</aside>
 	<section class="images">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
-		<img src="Img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
+		<img src="img/insta1.jpg">
 	</section>
 </body>
 </html>
